[package]
name = "seed"
version = "0.8.0"
description = "A Rust framework for creating web apps, using WebAssembly"
authors = ["DavidOConnor <david.alan.oconnor@gmail.com>", "Martin Kavík <martin@kavik.cz>"]
license = "MIT"
repository = "https://github.com/seed-rs/seed"
homepage = "https://seed-rs.org"
documentation = "https://docs.rs/seed"
readme = "README.md"
keywords = ["wasm", "webassembly", "frontend", "framework", "web"]
categories = ["wasm", "web-programming"]
edition = "2018"

build = "build.rs"

[build-dependencies]
version_check = "0.9.2"

[dev-dependencies]
wasm-bindgen-test = "0.3.18"

[dependencies]
console_error_panic_hook = "0.1.6"
cookie = { version = "0.14.2", features = ["percent-encode"] }
enclose = "1.1.8"
gloo-timers = { version = "0.2.1", features = ["futures"] }
gloo-file = { version = "0.1.0", features = ["futures"] }
indexmap = "1.6.0"
js-sys = "0.3.45"
pulldown-cmark = "0.8.0"
rand = { version = "0.7.3", features = ["wasm-bindgen", "small_rng"] }
serde = { version = "1.0.117", features = ['derive'] }
serde_json = "1.0.59"
wasm-bindgen = { version = "0.2.81", features = ["serde-serialize"] }
wasm-bindgen-futures = "0.4.18"
# @TODO: remove once we can use entities without `Debug` in `log!` and `error!` on `stable` Rust.
# https://github.com/Centril/rfcs/blob/rfc/quick-debug-macro/text/0000-quick-debug-macro.md#types-which-are-not-debug
dbg = "1.0.4"
futures = "0.3.6"
uuid = { version = "0.8.1", features = ["v4", "wasm-bindgen"] }

[dependencies.web-sys]
version = "0.3.45"
features = [
    "AbortController",
    "AbortSignal",
    "BeforeUnloadEvent",
    "Blob",
    "BinaryType",
    "CanvasRenderingContext2d",
    "CloseEvent",
    "console",
    "CustomEvent",
    "CustomEventInit",
    "DataTransfer",
    "Document",
    "DomException",
    "DragEvent",
    "Element",
    "Event",
    "EventTarget",
    "File",
    "FormData",
    "HashChangeEvent",
    "Headers",
    "History",
    "HtmlElement",
    "HtmlCanvasElement",
    "HtmlCollection",
    "HtmlDocument",
    "HtmlInputElement",
    "HtmlMenuItemElement",
    "HtmlProgressElement",
    "HtmlOptionElement",
    "HtmlDataElement",
    "HtmlMeterElement",
    "HtmlLiElement",
    "HtmlOutputElement",
    "HtmlParamElement",
    "HtmlTextAreaElement",
    "HtmlSelectElement",
    "HtmlButtonElement",
    "Location",
    "MessageEvent",
    "MouseEvent",
    "Navigator",
    "Node",
    "NodeList",
    "Performance",
    "PointerEvent",
    "PopStateEvent",
    "ReferrerPolicy",
    "Request",
    "RequestCache",
    "RequestCredentials",
    "RequestInit",
    "RequestMode",
    "RequestRedirect",
    "Response",
    "Selection",
    "Storage",
    "TcpReadyState",
    "Text",
    "Touch",
    "TouchEvent",
    "TouchList",
    "console",
    "WebSocket",
    "Window",
    "KeyboardEvent",
    "InputEvent",
    "Url",
    "UrlSearchParams",
]

[workspace]
members = [
    "examples/animation",
    "examples/auth",
    "examples/bunnies",
    "examples/component_builder",
    "examples/counter",
    "examples/canvas",
    "examples/custom_elements",
    "examples/drop_zone",
    "examples/el_key",
    "examples/graphql",
    "examples/i18n",
    "examples/markdown",
    "examples/fetch",
    "examples/no_change",
    "examples/pages",
    "examples/pages_hash_routing",
    "examples/pages_keep_state",
    "examples/resize_observer",
    # "examples/server_integration",   # has own workspace
    "examples/service_worker",
    "examples/subscribe",
    "examples/tests",
    "examples/tea_component",
    "examples/todomvc",
    "examples/unsaved_changes",
    "examples/update_from_js",
    "examples/url",
    "examples/user_media",
    "examples/websocket",
    "examples/window_events",
]

exclude = [
    # it has own workspace
    "examples/server_integration",
]
