[package]
name = "seed"
version = "0.10.0"
description = "A Rust framework for creating web apps, using WebAssembly"
authors = ["DavidOConnor <david.alan.oconnor@gmail.com>", "Martin Kavík <martin@kavik.cz>", "Markus Kohlhase <mail@markus-kohlhase.de>"]
license = "MIT"
repository = "https://github.com/seed-rs/seed"
homepage = "https://seed-rs.org"
documentation = "https://docs.rs/seed"
readme = "README.md"
keywords = ["wasm", "webassembly", "frontend", "framework", "web"]
categories = ["wasm", "web-programming"]
edition = "2021"
rust-version = "1.72.0"

[workspace]
members = [
    "examples/animation",
    "examples/auth",
    "examples/bunnies",
    "examples/component_builder",
    "examples/counter",
    "examples/counters",
    "examples/canvas",
    "examples/charts",
    "examples/custom_elements",
    "examples/drag_and_drop",
    "examples/drop_zone",
    "examples/el_key",
    "examples/graphql",
    "examples/i18n",
    "examples/intersection_observer",
    "examples/markdown",
    "examples/fetch",
    "examples/no_change",
    "examples/page_trait",
    "examples/on_insert",
    "examples/pages",
    "examples/pages_hash_routing",
    "examples/pages_keep_state",
    "examples/resize_observer",
    "examples/rust_from_js",
    "examples/record_screen",
    "examples/service_worker",
    "examples/subscribe",
    "examples/tests",
    "examples/tea_component",
    "examples/todomvc",
    "examples/unsaved_changes",
    "examples/update_from_js",
    "examples/url",
    "examples/user_media",
    "examples/websocket",
    "examples/window_events",
]

# they have own workspaces
exclude = [
    "examples/e2e_encryption",
    "examples/server_integration",
]

[dependencies]
enclose = "1.1.8"
futures = "0.3.28"
# https://docs.rs/getrandom/0.2.0/getrandom/#webassembly-support
getrandom = { version = "0.2.10", features = ["js"] }
gloo-timers = { version = "0.3.0", features = ["futures"] }
gloo-file = { version = "0.3.0", features = ["futures"] }
gloo-utils = "0.2.0"
indexmap = "2.0.0"
js-sys = "0.3.64"
rand = { version = "0.8.5", features = ["small_rng"] }
uuid = { version = "1.4.1", features = ["v4"] }
wasm-bindgen = "0.2.87"
wasm-bindgen-futures = "0.4.37"

# Optional dependencies
serde = { version = "1.0.188", features = ['derive'], optional = true }
serde-wasm-bindgen = { version = "0.5.0", optional = true }

[dependencies.web-sys]
version = "0.3.64"
features = [
    "AbortController",
    "AbortSignal",
    "BeforeUnloadEvent",
    "Blob",
    "BinaryType",
    "CanvasRenderingContext2d",
    "CloseEvent",
    "console",
    "CustomEvent",
    "CustomEventInit",
    "DataTransfer",
    "Document",
    "DomException",
    "DragEvent",
    "Element",
    "Event",
    "EventTarget",
    "File",
    "FormData",
    "HashChangeEvent",
    "Headers",
    "History",
    "HtmlElement",
    "HtmlCanvasElement",
    "HtmlCollection",
    "HtmlDocument",
    "HtmlDivElement",
    "HtmlInputElement",
    "HtmlMenuItemElement",
    "HtmlProgressElement",
    "HtmlOptionElement",
    "HtmlDataElement",
    "HtmlMeterElement",
    "HtmlLiElement",
    "HtmlOutputElement",
    "HtmlParamElement",
    "HtmlTextAreaElement",
    "HtmlSelectElement",
    "HtmlButtonElement",
    "HtmlFormElement",
    "Location",
    "MessageEvent",
    "MouseEvent",
    "Navigator",
    "Node",
    "NodeList",
    "Performance",
    "PointerEvent",
    "PopStateEvent",
    "ReferrerPolicy",
    "Request",
    "RequestCache",
    "RequestCredentials",
    "RequestInit",
    "RequestMode",
    "RequestRedirect",
    "Response",
    "Selection",
    "Storage",
    "TcpReadyState",
    "Text",
    "Touch",
    "TouchEvent",
    "TouchList",
    "console",
    "WebSocket",
    "Window",
    "KeyboardEvent",
    "InputEvent",
    "WheelEvent",
    "Url",
    "UrlSearchParams",
]

[features]
default = []
routing = ["dep:serde", "dep:serde-wasm-bindgen"]

[build-dependencies]
version_check = "0.9.4"

[dev-dependencies]
wasm-bindgen-test = "0.3.37"
