[package]
name = "advanced_routing"
version = "0.0.1"
authors = ["arn-the-long-beard <arn.menant@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib" ,"rlib"]

[dependencies]
seed = { git = "https://github.com/seed-rs/seed" }
seed_routing = { git ="https://github.com/arn-the-long-beard/seed-routing" , branch="main" }
serde = "1.0.115"
serde_json = "1.0.51"
heck="0.3.1"

[dependencies.web-sys]
version = "0.3"


[dev-dependencies]
wasm-bindgen-test = "0.3.17"

[profile.release]
lto = true

opt-level = 'z'
codegen-units = 1

[package.metadata.wasm-pack.profile.release]
wasm-opt = ['-O3']

