[package]
name = "animation"
version = "0.1.0"
authors = ["David O'Connor <david.alan.oconnor@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
seed = {path = "../../"}
rand = "0.8.5"
# https://docs.rs/getrandom/0.2.0/getrandom/#webassembly-support
getrandom = { version = "0.2.10", features = ["js"] }
