[package]
name = "animation_frame"
version = "0.1.0"
authors = ["David O'Connor <david.alan.oconnor@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
seed = {path = "../../"}
wasm-bindgen = "0.2.42"
web-sys = "^0.3.19"
serde = "^1.0.90"
serde_derive = "^1.0.90"
rand = {version = "0.6.5", features = ["wasm-bindgen"]}
