[package]
name = "bunnies"
version = "0.1.0"
authors = ["Martin Kavík <martin@kavik.cz>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]
# https://github.com/leudz/shipyard/issues/129
path = "src/empty_lib.rs"

[dependencies]
seed = { path = "../../" }
rand = { version = "0.8.5", features = ["small_rng"] }
nalgebra = "0.32.3"
awsm_web = { version = "0.43.0", features = ["tick", "webgl", "loaders", "audio", "serde_iso"], default-features = false }
shipyard = { version = "0.6.2", features = ["thread_local"], default-features = false }
