[package]
name = "canvas"
version = "0.1.0"
authors = ["David O'Connor <david.alan.oconnor@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
seed = {path = "../../"}
wasm-bindgen = "0.2.55"


[dependencies.web-sys]
version = "0.3.32"
features = [
    "CanvasRenderingContext2d",
    "HtmlCanvasElement",
]
