[package]
name = "counter"
version = "0.1.0"
authors = ["Your Name <email@address.com>"]
edition = "2018"


[lib]
crate-type = ["cdylib"]

[dependencies]
rebar = {path = "../../"}
wasm-bindgen = "^0.2.29"
web-sys = "^0.3.6"

# For serialization, eg sending requests to a server. Otherwise, not required.
serde = "^1.0.80"
serde_derive = "^1.0.80"
serde_json = "1.0.33"

# todo temp
#[dependencies.web-sys]
#version = "0.3.6"
#features = [
#    "Document",
#    "Element",
#    "Event",
#    "EventTarget",
#    "History",
#    "HtmlElement",
#    "HtmlCollection",
#    "HtmlInputElement",
#    "HtmlTextAreaElement",
#    "HtmlSelectElement",
#    "Location",
#    "MouseEvent",
#    "Node",
#    "NodeList",
#    "Performance",
#    "Request",
#    "RequestInit",
#    "RequestMode",
#    "Response",
#    "Storage",
#    "Text",
#    "console",
#    "Window",
#]