[package]
name = "drop_zone"
version = "0.1.0"
authors = ["David O'Connor <david.alan.oconnor@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
seed = {path = "../../"}
wasm-bindgen = "0.2.60"
wasm-bindgen-futures = "0.4.10"

[dependencies.web-sys]
version = "0.3.37"
features = [
    "DataTransfer",
    "DragEvent",
    "File",
    "FileList",
]
