[package]
name = "el_key"
version = "0.1.0"
authors = ["Ildar Akhmetgaleev <akhilman@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
seed = { path = "../../" }
wasm-bindgen = "0.2.60"
web-sys = { version = "0.3.37", features = ["DragEvent", "DataTransfer", "MouseEvent"] }
enclose = "1.1.8"
rand = { version = "0.7.3", features = ["wasm-bindgen", "small_rng"] }
scarlet = "1.1.0"
futures = "0.3.4"
