[package]
name = "el_key"
version = "0.1.0"
authors = ["Ildar Akhmetgaleev <akhilman@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
seed = { path = "../../" }
wasm-bindgen = "0.2.60"
web-sys = { version = "0.3.37", features = ["DragEvent", "DataTransfer"] }
rand = { version = "0.7.3", features = ["wasm-bindgen", "small_rng"] }
scarlet = "1.1.0"
static_assertions = "1.1.0"
regex = "1.3.7"
