[package]
name = "el_key"
version = "0.1.0"
authors = ["Ildar Akhmetgaleev <akhilman@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
seed = { path = "../../" }
rand = { version = "0.8.5", features = ["small_rng"] }
regex = "1.9.5"
scarlet = "1.2.0"
static_assertions = "1.1.0"
gloo-console = "0.3.0"
pulldown-cmark = "0.9.3"
