[package]
name = "intersection_observer"
version = "0.1.0"
authors = ["allan2"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dev-dependencies]
wasm-bindgen-test = "0.3.34"

[dependencies]
seed = { path = "../../" }
js-sys = "0.3.61"

[dependencies.web-sys]
version = "0.3.61"
features = [
    "IntersectionObserver",
    "IntersectionObserverInit",
    "IntersectionObserverEntry",
]
