[package]
name = "orders"
version = "0.1.0"
authors = ["David O'Connor <david.alan.oconnor@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
seed = {path = "../../"}
# Can't use repo with a release.
#gloo-timers = { git = "https://github.com/rustwasm/gloo", features = ["futures"] }
wasm-bindgen = "0.2.45"
futures = "^0.1.27"
