[package]
name = "record_screen"
version = "0.1.0"
authors = ["Martin Kavík <martin@kavik.cz>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
gloo-console = "0.2.3"
seed = {path = "../../"}

[dependencies.web-sys]
version = "0.3.61"
features = [
    "DisplayMediaStreamConstraints",
    "MediaDevices",
    "MediaStream",
    "HtmlMediaElement",
]
