[package]
name = "record_screen"
version = "0.1.0"
authors = ["Martin Kavík <martin@kavik.cz>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
gloo-console = "0.3.0"
seed = {path = "../../"}

[dependencies.web-sys]
version = "0.3.64"
features = [
    "DisplayMediaStreamConstraints",
    "MediaDevices",
    "MediaStream",
    "HtmlMediaElement",
]
