[package]
name = "backend"
version = "0.1.0"
authors = ["DavidOConnor <david.alan.oconnor@gmail.com>"]
edition = "2018"

[dependencies]
rocket = "^0.4.0-rc.1"
serde = { version = "^1.0.80", features = ['derive'] }
serde_json = "^1.0.33"

rocket_cors = "^0.4.0"

# For experimenting with joining data structures across client and server
seed = "^0.2.1"

shared = { path = "shared" }