[package]
name = "server-interaction"
version = "0.1.0"
authors = ["David O'Connor <david.alan.oconnor@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
seed = { path = "../../" }
wasm-bindgen = "^0.2.29"
web-sys = "^0.3.6"

serde = { version = "^1.0.83", features = ['derive'] }
serde_json = "^1.0.33"

# todo temp
futures = "^0.1.20"
wasm-bindgen-futures = "0.3.6"
