[package]
name = "shared"
version = "0.1.0"
authors = ["Your Name <email@address.com>"]
edition = "2018"

[dependencies]
js-sys = "^0.3.22"

# For serialization, eg sending requests to a server. Otherwise, not required.
serde = { version = "^1.0.92", features = ['derive'] }
#serde_json = "^1.0.39"

chrono = { version = "^0.4.6", features = ["serde"] }


[workspace]
members = [
    "me",
    "reports",
]