[package]
name = "service_worker"
description = "Seed service worker example"
repository = "https://github.com/seed-rs/seed"
version = "0.1.0"
authors = ["Will Johnson <william.c1.johnson@gmail.com>"]
edition = "2018"
license = "MIT"

[lib]
crate-type = ["cdylib"]
path = "src/lib.rs"

[[bin]]
name = "server"
path = "src/main.rs"

[dependencies]
#common
serde = "1.0.152"

# server
anyhow = { version = "1.0.69", optional = true }
serde_json = { version = "1.0.93", optional = true }
tokio = { version = "1.26.0", features = ["macros", "sync", "fs", "rt-multi-thread"], optional = true }
tracing = { version = "0.1.37", optional = true }
tracing-subscriber = { version = "0.3.16", optional = true, features = ["env-filter"] }
warp = { version = "0.3.3", optional = true }
web-push = { version = "0.9.3", optional = true }

# client
apply = { version = "0.3.0", optional = true }
seed =  { path = "../../", optional = true }
serde-wasm-bindgen = { version = "0.4.5", optional = true }

[dependencies.web-sys]
version = "0.3.61"
features = [
  "CacheStorage",
  "Notification",
  "NotificationPermission",
  "ServiceWorker",
  "ServiceWorkerContainer",
  "ServiceWorkerRegistration",
  "ServiceWorkerState",
  "PushManager",
  "PushSubscription",
  "PushSubscriptionJson",
  "PushSubscriptionKeys",
  "PushSubscriptionOptionsInit",
]
optional = true

[features]
default = []
client = ["apply", "seed", "web-sys"]
server = ["anyhow", "tokio", "warp", "tracing", "tracing-subscriber", "web-push"]
