[package]
name = "todomvc"
version = "0.1.0"
authors = ["Your Name <email@address.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
seed = { path = "../../" }
serde = "1.0.152"
uuid = { version = "1.3.0", features = ["serde", "v4"] }
indexmap = { version = "1.9.2", features = ["serde-1"] }
enclose = "1.1.8"
