[package]
name = "todomvc"
version = "0.1.0"
authors = ["Your Name <email@address.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
seed = { path = "../../", features = ["routing"] }
serde = { version = "1.0.188", features = ["derive"] }
uuid = { version = "1.4.1", features = ["serde", "v4"] }
indexmap = { version = "2.0.0", features = ["serde"] }
enclose = "1.1.8"
gloo-storage = "0.3.0"
serde_json = "1.0.105"
