[package]
name = "user_media"
version = "0.1.0"
authors = ["David O'Connor <david.alan.oconnor@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
gloo-console = "0.3.0"
seed = {path = "../../"}
wasm-bindgen-futures = "0.4.37"

[dependencies.web-sys]
version = "0.3.64"
features = [
    "MediaDevices",
    "MediaStreamConstraints",
    "MediaStream",
    "HtmlMediaElement",
]
