[package]
name = "websocket"
version = "0.1.0"
authors = ["Markus Kohlhase <markus.kohlhase@slowtec.de>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]
path = "src/client.rs"

[[bin]]
name = "server"
path = "src/server.rs"

[dependencies]
# common
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.93"
rmp-serde = "1.1.1"

# server
ws = { version = "0.9.2", optional = true }

#client
seed = { path = "../../", optional = true }
wasm-sockets = { version = "1", optional = true }

[features]
default = []
client = ["seed", "wasm-sockets"]
server = ["ws"]

