[package]
name = "auth_server"
version = "0.1.0"
authors = ["Your Name <email@address.com>"]
edition = "2018"

[dependencies]
tide = "0.11"
async-std = { version = "1.6", features = ["attributes"] }
jsonwebtoken = "7.2"
serde = { version = "1.0", features = ["derive"] }
chrono = "0.4"
time = "0.2"
cookie = "0.14"
femme = "2.1"
log = "0.4.8"
