[package]
name = "client"
version = "0.1.0"
authors = ["Your Name <email@address.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]
path = "src/lib.rs"

[dependencies]
seed = { path = "../../../" }
serde = "^1.0.103"
wasm-bindgen = "^0.2.55"

shared = { path = "../shared"}

[dependencies.web-sys]
version = "^0.3.32"
features = [
    "Blob",
    "Event",
    "EventTarget",
    "File",
    "FileList",
    "FormData",
    "HtmlInputElement",
]
