[package]
name = "client"
version = "0.1.0"
authors = ["Your Name <email@address.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]
path = "src/lib.rs"

[dev-dependencies]
wasm-bindgen-test = "0.3.18"

[dependencies]
seed = { path = "../../../" }
serde = "1.0.117"

shared = { path = "../shared"}
