[package]
name = "server"
version = "0.1.0"
authors = ["Your Name <email@address.com>"]
edition = "2018"

[dependencies]
actix = "0.10.0"
actix-web = "3.1.0"
actix-files = "0.4.0"
actix-multipart = "0.3.0"
actix-rt = "1.1.1"
futures-timer = "3.0.2"
futures = "0.3.6"

shared = { path = "../shared" }
