[package]
name = "reports"
version = "0.1.0"
authors = ["David O'Connor <david.alan.oconnor@gmail.com"]
edition = "2018"


[lib]
crate-type = ["cdylib"]


[dependencies]
seed = "^0.3.2"
wasm-bindgen = "^0.2.45"
web-sys = "^0.3.22"

# For serialization, eg sending requests to a server. Otherwise, not required.
serde = { version = "^1.0.92", features = ['derive'] }
serde_json = "^1.0.39"

chrono = { version = "^0.4.6", features = ["serde"] }

shared = { path = "../"}